--- a/michote/src/pages/userLogin/userLogin.css
+++ b/michote/src/pages/userLogin/userLogin.css
@@ -24,6 +24,7 @@
     align-items: center;
     background-color: #2D7BE4;
     padding: 40px;
+    width: 400px;
     
 }
 
@@ -35,6 +36,8 @@
 
 .login-inputs button{
     background-color: #CF2A27;
+    color: #FFF;
+    font-weight: 600;
 }
 
 .register-link button{
