--- a/michote/src/components/searchResult/searchResult.css
+++ b/michote/src/components/searchResult/searchResult.css
@@ -4,7 +4,7 @@
     flex-flow: row wrap;
     justify-content: space-around;
     align-items: center;
-    max-width: 800px;
+    width: 80%;
     min-height: 100px;
     padding: 2%;
     border: 1px solid #CF2A27;
@@ -24,6 +24,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+}
+
+.dtime-atime-element{
+    display: flex;
+    flex-direction: column;
 }
 
 .price-book{
