--- a/michote/src/pages/patnerLogin/partnerLogin.css
+++ b/michote/src/pages/patnerLogin/partnerLogin.css
@@ -1,4 +1,5 @@
 .login-page{
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -24,7 +25,6 @@
     align-items: center;
     background-color: #00ffd9;
     padding: 40px;
-    width: 400px;
 }
 
 .p-login-inputs input, .p-login-inputs button{
