--- a/michote/src/pages/userRegister/userRegister.css
+++ b/michote/src/pages/userRegister/userRegister.css
@@ -1,5 +1,7 @@
 .register-page{
+    margin-top: 50px;
     display:flex;
+    flex: 1;
     flex-direction: column;
     align-items: center;
 }
@@ -11,9 +13,10 @@
 
 
 .register-form{
-    margin: 20px auto;
-    width: 500px;
+    margin: 4rem auto;
+    width: 50%;
     display:flex;
+    flex: 1;
     flex-direction: column;
     align-items: center;
     border-radius: 0.5rem;
@@ -23,8 +26,9 @@
 .register-form-item{
     margin: 20px auto;
     display:flex;
+    flex: 1;
     flex-direction: column;
-    width: 75%;
+    width: 50%;
 }
 
 input, button{
@@ -38,3 +42,29 @@ input, button{
     color: #FFF;
     font-weight: 600;
 }
+
+@media screen and (max-width: 800px) {
+    .register-form{
+        width: 70%;
+    }
+    .register-form-item{
+        width: 70%;
+    }
+}
+
+
+@media screen and (max-width: 600px) {
+    .register-form{
+        width: 90%;
+    }
+
+    .register-form-item{
+        width: 90%;
+    }
+}
+@media screen and (max-width: 178px){
+    .register-page{
+        margin-top: 100px;
+    }
+}
+
