--- a/michote/src/pages/home/home.css
+++ b/michote/src/pages/home/home.css
@@ -1,5 +1,6 @@
 .home-page{
-    margin: 0;
+    margin:0;
+    margin-top: 50px;
     padding: 0;
 }
 
@@ -68,9 +69,10 @@
 
 .value{
     display: flex;
-    flex-direction: row;
+    flex-flow: row wrap;
     align-items: center;
-    width: 400px;
+    justify-content: center;
+    max-width: 400px;
     margin: 10px;
 }
 
@@ -119,9 +121,11 @@
 .top-destinations-container{
     text-align: center;
     margin-top: 50px;
+    margin: 1rem;
 }
 
 .top-destinations .destination img{
-    width: 400px;
-    height: 300px;
+    max-width: 400px;
+    max-height: 300px;
+    min-height: 300px;
 }
